Fix reference counting for the text brush

The actual bug puzzles me, because it could only have happened
if there were a paintop preset with a text brush, and the reporter
said all his custom brushes and presets were removed and this
still happened, but logically this is the only place where the
given backtrace could come from.

BUG:382588